--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,38 @@
-<com.test.cp.myscrolllayout.widget.ScrollableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<in.srain.cube.views.ptr.PtrClassicFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/ptr_frame"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->
+
+<com.test.cp.myscrolllayout.widget.ScrollableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollableLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/rl_head"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="#cdcdcd"
-        >
+        android:background="#cdcdcd">
 
-        <com.astuetz.PagerSlidingTabStrip
-            android:id="@+id/pagerStrip"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/imagepager"
             android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_height="30dp" />
+            android:layout_height="match_parent"
+            />
+        <!--android:layout_above="@+id/pagerStrip"-->
+
     </RelativeLayout>
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/pagerStrip"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true" />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        ></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent" />
 
 </com.test.cp.myscrolllayout.widget.ScrollableLayout>
+
+    <!--</in.srain.cube.views.ptr.PtrClassicFrameLayout>-->
