--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent" android:layout_height="200dp"
     android:orientation="horizontal"
     >
-<ImageView
-    android:id="@+id/iv"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:src="@drawable/ic_launcher"/>
 
     <TextView
         android:id="@+id/tv"
         android:text="hodf"
-
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:textSize="30dp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 </LinearLayout>
