--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<com.test.cp.myscrolllayout.widget.ScrollableLayout
+<com.cpoopc.scrollablelayoutlib.ScrollableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollableLayout"
     android:layout_width="match_parent"
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/rl_head"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/head_height"
         android:background="#cdcdcd">
 
         <android.support.v4.view.ViewPager
@@ -22,11 +22,11 @@
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/pagerStrip"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="@dimen/tab_height"
         android:layout_alignParentBottom="true" />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</com.test.cp.myscrolllayout.widget.ScrollableLayout>
+</com.cpoopc.scrollablelayoutlib.ScrollableLayout>
