--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="200dp"
     android:orientation="horizontal"
+    android:gravity="center"
     >
 
     <TextView
@@ -11,5 +12,5 @@
         android:gravity="center"
         android:textColor="#000000"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="200dp" />
 </LinearLayout>
