add scrolllistener to support parallax scrolling

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,32 @@
-<com.cpoopc.scrollablelayoutlib.ScrollableLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollableLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <RelativeLayout
-        android:id="@+id/rl_head"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/head_height"
-        android:background="#cdcdcd">
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/imagepager"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-    </RelativeLayout>
-
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/pagerStrip"
+            android:layout_height="wrap_content">
+            <Button
+                android:onClick="showPagerHeaderFragment"
+                android:text="PagerHeaderFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:onClick="showParallaxFragment"
+                android:text="ParallaxFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tab_height"
-        android:layout_alignParentBottom="true" />
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-</com.cpoopc.scrollablelayoutlib.ScrollableLayout>
+    </FrameLayout>
+</FrameLayout>
