--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.cp.myscrolllayout.RecyclerViewFragment">
+    tools:context="com.test.cp.myscrolllayout.fragment.RecyclerViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
