--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.cp.myscrolllayout.ListFragment">
+    tools:context="com.test.cp.myscrolllayout.fragment.ListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
