--- a/app/src/main/res/layout/fragment_pagerheader.xml
+++ b/app/src/main/res/layout/fragment_pagerheader.xml
@@ -1,33 +1,54 @@
-<com.cpoopc.scrollablelayoutlib.ScrollableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollableLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.test.cp.myscrolllayout.fragment.PagerHeaderFragment">
+    >
 
-    <RelativeLayout
-        android:id="@+id/rl_head"
+    <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        android:id="@+id/rotate_header_web_view_frame"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/head_height"
-        android:background="#cdcdcd">
+        android:layout_height="match_parent"
+        app:ptr_duration_to_close="200"
+        app:ptr_duration_to_close_header="1000"
+        app:ptr_keep_header_when_refresh="true"
+        app:ptr_pull_to_fresh="false"
+        app:ptr_ratio_of_header_height_to_refresh="1.2"
+        app:ptr_resistance="1.7">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/imagepager"
+        <com.cpoopc.scrollablelayoutlib.ScrollableLayout
+            android:id="@+id/scrollableLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="com.test.cp.myscrolllayout.fragment.PagerHeaderFragment">
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_head"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/head_height"
+                android:background="#cdcdcd">
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/pagerStrip"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/tab_height"
-        android:layout_alignParentBottom="true" />
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/imagepager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+            </RelativeLayout>
 
-</com.cpoopc.scrollablelayoutlib.ScrollableLayout>
+            <com.astuetz.PagerSlidingTabStrip
+                android:id="@+id/pagerStrip"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tab_height"
+                android:layout_alignParentBottom="true"/>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </com.cpoopc.scrollablelayoutlib.ScrollableLayout>
+
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+</RelativeLayout>
